--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
     "framer-motion": "^12.33.0",
     "jwt-decode": "^4.0.0",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
